src/test/ui/switched-expectations.stderr
error[E0308]: mismatched types
  --> $DIR/switched-expectations.rs:3:30
   |
LL |     let ref string: String = var;
   |                              ^^^ expected struct `String`, found `i32`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0308`.
